# nexus-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore.yaml  AGENTS.md  Dockerfile  README.md  RELEASE.md  docker-compose.yml  nexus-mcp.toml  pyproject.toml  pyrightconfig.json  renovate.json  server.json
.github/: CODEOWNERS  dependabot.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependabot-uv-lock.yml  dependency-cooldown-gate.yml  dependency-cooldown-rescan.yml  dependency-cooldown-scan.yml  dependency-cooldown.yml  dependency-safety-non-bot-gate.yml  dependency-safety.yml  pre-commit-autoupdate.yml  release.yml  security.yml  tag-release.yml
docs/: opencode-server-setup.md
src/nexus_mcp/: __init__.py  __main__.py  cli_detector.py  compound_tools.py  config.py  config_resolver.py  correlation.py  elicitation.py  emitters.py  exceptions.py  http_client.py  icons.py  labels.py  middleware.py  openapi_setup.py  opencode_resources.py  parser.py  preferences.py  process.py  resources.py  server.py  sse.py  store.py  tiers.py  types.py
src/nexus_mcp/prompts/: __init__.py  analysis.py  comparison.py  generation.py  testing.py
src/nexus_mcp/runners/: __init__.py  base.py  claude.py  codex.py  factory.py  gemini.py  opencode.py  opencode_server.py  retry.py
tests/: __init__.py  conftest.py  fakes.py  fixtures.py
tests/e2e/: conftest.py  test_conditional_registration.py  test_elicitation_e2e.py  test_mcp_protocol.py  test_middleware_integration.py  test_opencode_server_e2e.py  test_preferences_protocol.py  test_progress.py  test_prompts_e2e.py  test_resources_e2e.py  test_session_resources_e2e.py  test_session_tools_e2e.py  test_tiers_e2e.py
tests/integration/: __init__.py  conftest.py  test_claude_runner.py  test_cli_detection.py  test_codex_runner.py  test_gemini_runner.py  test_opencode_runner.py  test_server_pipeline.py  test_session_integration.py
tests/unit/: conftest.py  test___main__.py  test_cli_detector.py  test_cli_detector_opencode_server.py  test_compound_tools.py  test_config.py  test_config_opencode_server.py  test_correlation.py  test_elicitation.py  test_exceptions.py  test_extension_points.py  test_http_client.py  test_icons.py  test_log_emitter.py  test_middleware.py  test_openapi_setup.py  test_opencode_resources.py  test_parser.py  test_preferences.py  test_process.py  test_provider_tools.py  test_release_workflow.py  test_resources.py  test_server.py  test_server_claude_pipeline.py  test_server_codex_pipeline.py  test_server_gemini_pipeline.py  test_server_progress.py  test_session_resources.py  test_sse.py  test_store.py  test_tier_tools.py  test_tiers.py  test_types.py  test_types_label.py  test_visibility_tags.py
tests/unit/prompts/: test_analysis.py  test_comparison.py  test_generation.py  test_testing.py
tests/unit/runners/: __init__.py  conftest.py  test_base.py  test_base_progress.py  test_claude.py  test_codex.py  test_factory.py  test_gemini.py  test_log_emitter.py  test_opencode.py  test_opencode_server.py  test_runner_pipeline.py
